[gd_scene load_steps=12 format=3 uid="uid://cls41f23ro05u"]

[ext_resource type="Script" path="res://UI/HUD/HUD.gd" id="1_dy2ux"]
[ext_resource type="Script" path="res://UI/HUD/ExperienceBar.gd" id="2_qxpjf"]
[ext_resource type="PackedScene" uid="uid://bei0ewiiu0oln" path="res://UI/Inventory/inventory.tscn" id="3_r21vr"]
[ext_resource type="PackedScene" uid="uid://cbbvt8rf4y1n4" path="res://UI/LootMenu/loot_menu.tscn" id="4_m76s0"]
[ext_resource type="PackedScene" uid="uid://fi3swbm7tu0t" path="res://UI/LevelUpMenu/level_up_menu.tscn" id="5_03xwm"]
[ext_resource type="PackedScene" uid="uid://cvd3vvp17r7qx" path="res://ConfigMenu/configure_weapons.tscn" id="5_jquo2"]
[ext_resource type="PackedScene" uid="uid://cepn4uj7wa126" path="res://UI/PlayerMenu/player_menu.tscn" id="7_joa0v"]
[ext_resource type="PackedScene" uid="uid://dk30tumpnkoju" path="res://UI/GameOverScreen/game_over_screen.tscn" id="8_y7dkx"]

[sub_resource type="SystemFont" id="SystemFont_g6qcy"]

[sub_resource type="LabelSettings" id="LabelSettings_gnx2e"]
font = SubResource("SystemFont_g6qcy")
font_size = 30
font_color = Color(0, 0, 0, 1)
outline_size = 4
outline_color = Color(0, 0, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_liywv"]
bg_color = Color(0.0117647, 0.631373, 0, 1)

[node name="Hud" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_dy2ux")

[node name="ExperienceBar" type="ProgressBar" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -41.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_qxpjf")
metadata/_edit_use_anchors_ = true

[node name="PlayerLevelBacksplash" type="ColorRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -88.0
offset_right = 46.0
offset_bottom = -43.0
grow_vertical = 0
color = Color(0.294118, 0.329412, 0.356863, 1)
metadata/_edit_group_ = true

[node name="PlayerLevelLabel" type="Label" parent="PlayerLevelBacksplash"]
layout_mode = 0
offset_left = -1.0
offset_top = 2.0
offset_right = 45.0
offset_bottom = 44.0
text = "1"
label_settings = SubResource("LabelSettings_gnx2e")
horizontal_alignment = 1

[node name="Inventory" parent="." instance=ExtResource("3_r21vr")]
offset_top = 2.0
offset_right = 385.0
offset_bottom = 62.0

[node name="LootMenu" parent="." instance=ExtResource("4_m76s0")]
visible = false

[node name="LevelUpMenu" parent="." instance=ExtResource("5_03xwm")]
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ConfigureWeapons" parent="." instance=ExtResource("5_jquo2")]
process_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.0
offset_top = -76.0
offset_right = 354.0
offset_bottom = 76.0

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -338.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_liywv")
value = 100.0

[node name="PlayerMenu" parent="." instance=ExtResource("7_joa0v")]
visible = false

[node name="GameOverScreen" parent="." instance=ExtResource("8_y7dkx")]
visible = false
